--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
+    "dayjs": "^1.11.13",
+    "filesize": "^10.1.6",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
